Release v0.0.40
